# Cietro-2

./: .env.sample  README.md  pyproject.toml  requirements.txt  start.py
app/: __init__.py  controller.py  errors.py  exceptions.py  mailer.py  models.py  pg_database.py  qr.py  redis_database.py
app/lib/: codes.py  mail_generator.py  qr_generator.py  types_checker.py
app/static/css/: index.css  style.css  variables.css
app/static/css/errors/: error_404.css
app/static/css/fonts/: mayayo_w00.eot
app/static/js/: forms.js
app/templates/: company.html  company_register.html  contact.html  faq.html  feedback.html  forgot_password.html  index.html  login.html  privacy.html  profile.html  register.html  reset_password.html
app/templates/base_templates/: auth_template.html  index_template.html
app/templates/emails/: add_item.html  add_item.txt  password_reset.html  password_reset.txt
app/templates/errors/: error_404.html
